<resources>
    <string name="app_name">OOTD</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="btn_signIn">Sign-In\n</string>
    <string name="register">Don\'t have an account?</string>
    <string name="klick_here">Register</string>
    <string name="btn_signOut">Sign-Up</string>
    <string name="login">Have Account?</string>
    <string name="klick_here1">Sign-In</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="clothes">My Clothes</string>
    <string name="add">Add</string>
    <string name="profile_name">Alexandra</string>
    <string name="myprofile">My Profile</string>
    <string name="title_add">Add Clothes</string>
    <string name="email">Alex11@gmail.com</string>
    <string name="phone">0872536721</string>
    <string name="quotes">\"Make Your Outfit Easily\"</string>
    <string name="myoutfit">My Outfit</string>
    <string name="outfit">Outfit</string>
    <string name="jenis">jenis</string>
    <string name="name">Name</string>
    <string name="type">Type:</string>
    <string name="category">category</string>
    <string name="category1">Category:</string>
    <string name="clother_color">Color</string>
    <string name="Color">Color:</string>
    <string name="delete_items">Delete Items</string>
    <string name="delete_message">Do you want to delete the items?</string>
    <string name="delete">Delete</string>
    <string name="tpis">1. Take photos during the day or in\n        a bright room.\n2. Don’t have the same color\n       background as your item.\n3. Hang your items or lay them out\n       flat.\n4. Avoid other objects in the \n       background.</string>
    <string name="ootd_name">Name Ottd</string>
    <string name="items">Items</string>
    <string name="add_foto">Add Images</string>
    <string name="galery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_message">What Do You Want?</string>
    <string name="upload_foto">Upload Photo</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit Profile</string>
    <string name="create_your_outfit">Create your outfit</string>
    <string name="save">save clothes</string>
    <string name="cancel">cancel</string>
    <string name="back">back</string>
    <string name="jacket">Jacket</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="accessory">accesory</string>
    <string name="shoes">shoses</string>
    <string name="mashup">Create Your Outfit</string>
</resources>