<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.mashup.MashupActivity">

    <!-- Back Button -->
    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalTop"
        android:contentDescription="@string/back" />

    <!-- Title -->
    <TextView
        android:id="@+id/textViewTitle"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_your_outfit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/imageBack" />

    <!-- Jacket -->
    <ImageView
        android:id="@+id/imageViewJacket"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalTop"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalMiddle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalCenter"
        android:background="@drawable/bg_dashed_border"
        android:contentDescription="@string/jacket" />

    <!-- Top -->
    <ImageView
        android:id="@+id/imageViewTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalTop"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalMiddle"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalCenter"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_dashed_border"
        android:contentDescription="@string/top" />

    <!-- Bottom -->
    <ImageView
        android:id="@+id/imageViewBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_dashed_border"
        android:contentDescription="@string/bottom"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalMiddle"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottomExtra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalCenter" />

    <!-- Accessory -->


    <ImageView
        android:id="@+id/imageViewAccessory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalMiddle"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalCenter"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_dashed_border"
        android:contentDescription="@string/accessory" />

    <!-- Shoes -->
    <ImageView
        android:id="@+id/imageViewShoes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintBottom_toTopOf="@id/buttonCancel"
        app:layout_constraintStart_toEndOf="@id/guidelineVerticalCenter"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_dashed_border"
        android:contentDescription="@string/shoes" />

    <!-- Guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottomExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <!-- Save Button -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonCancel"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toEndOf="@id/buttonSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
