<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/purple_5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_message"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold" />
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancel"
                android:backgroundTint="@color/purple_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:layout_marginEnd="8dp"
                />
            
            <Button
                android:id="@+id/btnDelete"
                android:backgroundTint="@color/grey_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_marginStart="8dp"
                />


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>