<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_1"
    android:layout_marginBottom="72dp"
    tools:context=".ui.home.homeUi.clothes.ClothesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title_myoutfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myoutfit"
        android:textColor="@color/light"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        tools:layout_editor_absoluteX="178dp"
        tools:layout_editor_absoluteY="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:src="@drawable/line"
        android:layout_marginTop="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
       app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_myoutfit"
        />

    <TextView
        android:id="@+id/textoutfit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:text="@string/outfit"
        android:textColor="@color/light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_outfit_horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoutfit" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:textSize="20sp"
        android:textColor="@color/light"
        android:text="@string/jenis"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintTop_toBottomOf="@id/rv_outfit_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:layout_marginStart="8dp"
    android:textSize="20sp"
    android:textColor="@color/light"
    android:text="@string/items"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintTop_toBottomOf="@id/textView6"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_toper_horizontal"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:scrollbars="horizontal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mid_horizontal"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:scrollbars="horizontal" />

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bott_horizontal"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:scrollbars="horizontal"
        />
    </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>